--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="style_home.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container-top">
@@ -15,13 +15,11 @@
     </div>
     <header>
         <div class="header">
-            <img src="img/og/sally.png" class="sally">
             <a href="home.html"><h1 class="logo"><img src="img/sallyfacelogo.png"></h1></a>
-            <img src="img/og/larry.png" class="larry">
         </div>
         <p>A DARK MYSTERY IS UNFOLDING...</p>
     </header>
-    <nav>
+    <nav style="width: 100%;">
         <ul>
             <li><a href="home.html"> HOME</a></li>
             <li><a href="shop.html">SHOP</a></li>
@@ -31,9 +29,8 @@
     </nav>
     <main>
         <div class="big-container">
-            <div class="container-wrapper">
-                <div class="container">
-                    <h2>
+                <div class="container1">
+                    <h2 class="aboutsf">
                         ABOUT SALLY FACE
                     </h2>
                     <p class="aboutgame1">
@@ -53,9 +50,8 @@
                     <p class="aboutgame2">
                         Handcrafted by a solo dev.
                     </p> 
-                </div>
-                <div class="container2">
-                    <h1>GAMEPLAY</h1>
+                    </div>
+                    <h1 class="gameplay">GAMEPLAY</h1>
                     <p class="gameplay1">
                         Story Driven, 2D Sidescrolling Adventure.
                     </p>
@@ -65,45 +61,14 @@
                     <p class="gameplay1">
                         The game is composed of five episodes in total. The first episode offers a short introduction to Sally Face, which the subsequent episodes greatly expand upon.
                     </p>
-                    <h1> PLAY SALLY FACE </h1>
-                    <p class="play">
-                        <a href=""><img src="img/steam.png"></a>
-                        <a href=""><img src="img/xbox.png"></a>
-                        <a href=""><img src="img/ps.png"></a>
-                    </p>
-                </div>
-            </div>
-            <div class="container3">
-                <h1> ABOUT THE CREATOR </h1>
+                <h1 class="aboutcreator"> ABOUT THE CREATOR </h1>
                 <p class="creator">  Steve Gabry has been creating hit games for 11 years. As the founder of Portable Moose (2015), Steve’s most known for his solo creation of the dark adventure game, Sally Face (2016-2019). 
                 Steve’s career also includes co-founding Wither Studios and working with them as: creative director of Crowman & Wolfboy (2013, mobile platformer), artist/designer on Immure (2019, psychological horror) and artist/designer on Touched by an Outer God (2020, action horror FPS). 
                 </p>
             </div>
         </div>
-        <div class="container-awards" style="display: flex; justify-content: center";>
-            <img src="img/1.png" style="width: 160px";>
-            <img src="img/2.png" style="width: 160px";>
-            <img src="img/3.png" style="width: 160px";>
-            <img src="img/4.png" style="width: 160px";>
-            <img src="img/5.png" style="width: 160px";>
-            <img src="img/6.png" style="width: 160px";>
-        </div>
-        <div class="container-secondhalf">
-            <div class="container-wrapper">
-                <div class="container-scrn">
-                    <h2> SCREENSHOTS FROM GAME </h2>
-                        <img src="img/scrn/stažený soubor (1).jpg" style="width: 150px;">
-                        <img src="img/scrn/stažený soubor (4).png" style="width: 150px;">
-                        <img src="img/scrn/stažený soubor (5).png" style="width: 150px;">
-                        <img src="img/scrn/stažený soubor (7).png" style="width: 150px;">
-                        <img src="img/scrn/stažený soubor (8).png" style="width: 150px;">
-                        <img src="img/scrn/stažený soubor (9).png" style="width: 150px;">
-                        <img src="img/scrn/stažený soubor.jpg" style="width: 150px;">
-                        <img src="img/scrn/stažený soubor.png" style="width: 150px;">
-                        <img src="img/scrn/stažený soubor (3).png" style="width: 150px;">
-                </div>
+            <h1 class="questions"> FREQUENTLY ASKED QUESTIONS </h1>
                 <div class="container2">
-                    <h1> FREQUENTLY ASKED QUESTIONS </h1>
                     <details>
                         <summary> will sally face come to consoles? </summary>
                         <p class="QA1"> sally face is now on nintendo switch, PS4, PS5, xbox one and xbox series s|x. </p>
@@ -128,19 +93,18 @@
                         <summary> will the game be translated into more languages? </summary>
                         <p class="QA2"> spanish and french will be coming soon. </p>
                     </details>
-                    <div class="container-news">
-                        <h3>Get all the latest news and annoucements!!!</h3>
-                        <form class="submit" method="get" style="text-align: center;">
-                            <label for="email"></label>
-                            <input type="text" id="name" name="email" placeholder="email address">
-                            <input type="submit" value="submit">
-                        </form>
-                    </div>
                 </div>
+            <div class="container-news">
+                <h3 class="news">Get all the latest news and annoucements!!!</h3>
+                    <form class="submit" method="get">
+                        <label for="email"></label>
+                        <input type="text" id="name" name="email" placeholder="email address">
+                        <input type="submit" value="submit">
+                    </form>
             </div>
         </div>
         <div class="container-end">
-            <img src="img/masklight.png" style="width: 30px;">
+            <img src="img/masklight.png" id="mask">
         </div>
         <div>
             <h1 class="contacts"> CONTACTS </h1>
