--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
-    <link rel="stylesheet" href="style_shop.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container-top">
@@ -15,9 +15,7 @@
     </div>
     <header>
         <div class="header">
-            <img src="img/og/neil.png" class="neil">
             <a href="home.html"><h1 class="logo"><img src="img/sallyfacelogo.png"></h1></a>
-            <img src="img/og/todd.png" class="todd">
         </div>
         <p>A DARK MYSTERY IS UNFOLDING...</p>
     </header>
@@ -30,7 +28,7 @@
         </ul>
     </nav>
     <main>
-        <img src="img/banner1.png">
+        <img src="img/banner1.png" class="banner">
         <div class="eshop-container">
             <div class="item">
                 <a href=""><img src="img/products/1.png" alt="item1"></a>
@@ -79,6 +77,7 @@
             </div>
         </div>
     </main>
+    
     <div class="container-end" >
         <img src="img/masklight.png" style="width: 30px;">
     </div>
@@ -87,7 +86,6 @@
         <p class="email"> EMAIL - contactsallyface@email.com</p>
         <p class="collaboration">COLABORATIONS - if you are interested in colaborating, please contact us on our email</p>
     </div>
-
 <footer>
     <p> Privacy policy | Copyright &copy; Second Project | All Rights Reserved</p>
 </footer>
